# MTASC

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mtasc.hpp
include/client/Parser/: Urlparser.hpp
include/client/buffer/: buffer.hpp
include/client/clientapp/: clientTool.hpp  method.hpp
include/client/socket/: socket_header.h
include/client/socket/SSL/: socket_ssl.hpp
include/client/socket/TCP/: socket_tcp.hpp
include/client/socket/ip/: Ipv4addrs.h  Ipv6addrs.h
include/client/util/: type_util.hpp
include/thread/: thread.h  threadTask.hpp
lib/: M_maker_httpv1_template.cc
lib/parser_lib/: urlparser_lib.cc
test/: test.cc  test_stl.cc  test_tls.cc  test_url.cc
